--- a/TccLulu-war/web/relatorio_horas.xhtml
+++ b/TccLulu-war/web/relatorio_horas.xhtml
@@ -16,8 +16,8 @@
                             <p:column headerText="Nome" filterBy="#{pessoa.lista}">
                                 <h:outputText value="#{pessoa.nome}"/>                                
                             </p:column>
-                            <p:column headerText="Total de Horas" filterBy="#{pessoa.lista}">
-                                <h:outputText value="#{pessoa.nome}"/>                                
+                            <p:column headerText="Total de Horas">
+                                <h:outputText value="#{curso_externoMNG.total}"/>                                
                             </p:column>
                             
                         </p:dataTable>
